<resources>
    <string name="app_name">Todo List</string>
    <string name="task">Task</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="mark_as_completed">Mark as completed</string>
    <string name="reset">Reset</string>
    <string name="about">About</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="add_todo">Add Todo</string>
    <string name="update_todo">Update Todo</string>
    <string name="about_app">ToDo App\nVersion: 1.0\
    \nDeveloped by: Tumininu
    \nDeveloper\'s contact: \noluwatumininuojo25@gmail.com</string>
    <string name="fab">fab</string>
    <string name="navigation_drawer_icon">navigation_drawer_icon</string>
    <string name="oluwatumininuojo25_gmail_com">oluwatumininuojo25@gmail.com</string>
    <string name="version_1_1_0">Version 1.1.0</string>
    <string name="designed_and_developed_by">Designed And Developed by</string>
    <string name="tumininu_ojo">Tumininu Ojo</string>
    <string name="https_github_com_tumininucodes">https://github.com/TumininuCodes</string>
    <string name="the_rapidity_to_which_we_humans_forget_is_astonishing">The rapidity to which we humans forget is astonishing</string>
    <string name="todo_list">Todo List</string>
    <string name="backup">Backup</string>
    <string name="export">Export</string>
    <string name="developer_s_image">Developer\'s Image</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
