<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="8dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/dashboard_toolbar"
            android:layout_width="match_parent"
            android:elevation="12dp"
            android:layout_height="48dp"
            android:background="@color/colorPrimary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/navigation_drawer_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/navigation_drawer_icon"
                    android:src="@drawable/ic_baseline_menu_open_24" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/ActionBarText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:paddingTop="2dp"
                    android:text="@string/app_name" />

            </LinearLayout>

        </com.google.android.material.appbar.MaterialToolbar>

    </androidx.cardview.widget.CardView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_dashboard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:overScrollMode="always" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_dashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:elevation="12dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/fab"
            android:src="@drawable/ic_add_black_24dp"
            app:backgroundTint="@color/colorPrimaryDark"
            app:rippleColor="@color/colorWhite" />

    </FrameLayout>

</LinearLayout>

